[project]
name = "baby-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "fastapi[standard]>=0.115.11",
    "httpx>=0.28.1",
    "mangum>=0.19.0",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    # In development mode, include the FastAPI development server.
    "fastapi[standard]>=0.115.11",
]
